# EmiyaMind

./: pyproject.toml
method/: rmsnorm.py  rope.py
model/: model.py
